bad-sample/src/main/java/com/andrewreitz/bad/sample/Main.java
package com.andrewreitz.bad.sample;

import com.andrewreitz.bad.Bad;

@Bad
public class Main {
  @Bad
  public static void main(String[] args) {
    System.out.println("Hello World!");
  }
}
